# evo-algo

./: evo-algo.csv  main.py  nohup.out  pyproject.toml
