[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "whisperedgrimarchitect"
version = "0.1.0"
[tool.poetry.dependencies]
natsort = "^7.0"
opencv-python = "^4.2"
pandas = "^1.0"
python = "^3.8"
seaborn = "^0.10.1"
[tool.poetry.dev-dependencies]
